<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/temparature_item_bg"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/time_example"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <!-- Valor de temperatura -->
        <TextView
            android:id="@+id/_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/degree_example"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Botón de eliminar -->
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="1dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/delete_record"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>