<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/title"
            android:textColor="@color/material_dynamic_secondary30"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <!-- Botón Temperatura -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/material_dynamic_neutral20">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/material_dynamic_neutral80"
                    android:padding="20dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cornerRadius="16dp"
                    app:iconGravity="textStart"
                    android:onClick="openTempRecords"
                    android:fontFamily="sans-serif-medium"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Botón Humedad -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/material_dynamic_neutral20">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidityLabel"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/material_dynamic_neutral80"
                    android:padding="20dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cornerRadius="16dp"
                    app:iconGravity="textStart"
                    android:onClick="openHumidityRecords"
                    android:fontFamily="sans-serif-medium"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
